@@ -7,22 +7,8 @@ import seedu.address.logic.parser.exceptions.ParseException;
 
 /**
  * Represents a Person's name in the address book.
- * Guarantees: immutable; is valid as declared in {@link #isValidName(String)}
  */
 public class Name {
-
-    public static final String MESSAGE_CONSTRAINTS_NO_BLANK_NAME =
-            "Names should not be blank\n";
-    public static final String MESSAGE_CONSTRAINTS_AT_LEAST_ONE_ALPHANUMERIC =
-            "Names should contain at least one alphabetic character\n";
-    public static final String MESSAGE_CONSTRAINTS =
-            "Names can only contain alphanumeric characters, spaces, hyphens, apostrophes, accented characters,"
-                    + " periods, digits and slashes\n";
-    public static final String MESSAGE_CONSTRAINTS_INVALID_START_END =
-            "Names should not start or end with a hyphen, apostrophe, accented character, period or slash\n";
-    public static final String MESSAGE_CONSTRAINTS_NO_CONSECUTIVE_SPECIAL_CHAR =
-            "Names should not contain consecutive spaces, hyphens, apostrophes, accented characters,"
-                    + "periods or slashes\n";
 
     /*
      * The first character of the address must not be a whitespace,
@@ -34,12 +20,31 @@ public class Name {
     public static final String VALIDATION_REGEX_NO_SPECIAL_CHAR_END = "^.*[\\-'’./]$";
     public static final String VALIDATION_REGEX_NO_CONSECUTIVE_SPECIAL_CHAR = ".*([ \\-'’./])\\1.*";
 
+    public static final int MAX_NAME_CHAR_LENGTH = 95;
+
+    public static final String MESSAGE_CONSTRAINTS_NO_BLANK_NAME =
+            "Names should not be blank\n";
+    public static final String MESSAGE_CONSTRAINTS_AT_LEAST_ONE_ALPHANUMERIC =
+            "Names should contain at least one alphanumeric character\n";
+    public static final String MESSAGE_CONSTRAINTS =
+            "Names can only contain alphanumeric characters, spaces, hyphens, apostrophes, accented characters,"
+                    + " periods and slashes\n";
+    public static final String MESSAGE_CONSTRAINTS_INVALID_START_END =
+            "Names should not start or end with a hyphen, apostrophe, period or slash\n";
+    public static final String MESSAGE_CONSTRAINTS_NO_CONSECUTIVE_SPECIAL_CHAR =
+            "Names should not contain consecutive spaces, hyphens, apostrophes,"
+                    + " periods or slashes\n";
+    public static final String MESSAGE_CONSTRAINTS_NAME_OVER_95_CHARS = String.format(
+            "Names should not be longer than %d characters!\n",
+            MAX_NAME_CHAR_LENGTH
+    );
+
     public final String fullName;
 
     /**
-     * Constructs a {@code Name}.
+     * Constructs a {@code Name} after validating it.
      *
-     * @param name A valid name.
+     * @throws IllegalArgumentException if the given name is invalid
      */
     public Name(String name) {
         requireNonNull(name);
@@ -54,16 +59,16 @@ public class Name {
     }
 
     /**
-     * Returns true if a given string is a valid name.
+     * Validates the given name string against defined constraints.
+     *
+     * @throws IllegalArgumentException if the name is invalid
      */
     public static boolean isValidName(String test) throws ParseException {
 
-        // Checks if the name is blank
-        if (test.trim().isEmpty()) {
+        if (test.isBlank()) {
             throw new ParseException(MESSAGE_CONSTRAINTS_NO_BLANK_NAME);
         }
 
-        // Checks if the name contains at least one alphabetic character
         if (!test.matches(VALIDATION_REGEX_AT_LEAST_ONE_ALPHANUMERIC)) {
             throw new ParseException(MESSAGE_CONSTRAINTS_AT_LEAST_ONE_ALPHANUMERIC);
         }
@@ -79,13 +84,15 @@ public class Name {
             throw new ParseException(MESSAGE_CONSTRAINTS_INVALID_START_END);
         }
 
-        // If the name contains consecutive special characters
         if (test.matches(VALIDATION_REGEX_NO_CONSECUTIVE_SPECIAL_CHAR)) {
             throw new ParseException(MESSAGE_CONSTRAINTS_NO_CONSECUTIVE_SPECIAL_CHAR);
         }
 
-        return true;
+        if (test.trim().length() > MAX_NAME_CHAR_LENGTH) {
+            throw new ParseException(MESSAGE_CONSTRAINTS_NAME_OVER_95_CHARS);
+        }
 
+        return true;
     }
 
     @Override
